<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="spotify_streamer_app_name">Spotify Streamer</string>
    <string name="scores_app_name">Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="build_it_bigger_app_name">Build It Bigger</string>
    <string name="xyz_reader_app_name">XYZ Reader</string>
    <string name="capstone_app_name">My Capstone App</string>
    <string name="launch_toast_message">"This button will launch "</string>
</resources>
