<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jag0292.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_nanodegree_apps"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonSpotifyStreamer"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonScoresApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonLibraryApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonBuildItBigger"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonXYZReader"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background_2"
        android:text="@string/capstone_my_own_app"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:onClick="showMessage"
        android:id="@+id/buttonCapstoneMyOwnApp"/>



</LinearLayout>
